# adhd-materia

./: .gitignore  Cargo.toml  settings_list.md
assets/: filter_default.py  filter_only_undone.py  sorting_by_priority.py
assets/help_strings/: filter_scripts.txt  filter_scripts_2.txt  other_scripts.txt  scheduled_task_list.txt  scheduled_task_list_2.txt  scripts.txt  scripts_2.txt  settings.txt  sorting_scripts.txt  sorting_scripts_2.txt  sprint_list.txt  subtasks.txt  task_list.txt
assets_dev/: icon_orig.psd
src/: app.rs  data_dir.rs  lib.rs  main.rs  ok_cancel_dialog.rs  session.rs  settings.rs  side_panel.rs  startup_script.rs  tag.rs  utils.rs
src/scripts/: badge.rs  filter.rs  list.rs  mod.rs  py_bindings.rs  sorting.rs  standalone_script.rs  ui.rs  value.rs
src/tag/: mod.rs  ui.rs
src/task/: display_list.rs  list.rs  mod.rs  scheduled.rs  ui.rs
